# deadops

./: Cargo.toml  README.md  docker-compose.yml  justfile
src/: common.rs  lib.rs  main.rs
src/agents/: mod.rs
src/agents/jenkins/: jenkins_agent.rs  mod.rs
src/agents/security/: mod.rs  threat_detector.rs  vulnerability_scanner.rs
src/config/: mod.rs
src/core/: communication.rs  coordination.rs  mod.rs  state.rs
src/jenkins/: agent.rs  tools.rs
src/utils/: mod.rs
