[package]
name = "deadops"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.0"
chrono = { version = "0.4.42", features = ["serde"] }
env_logger = "0.11.8"
futures = "0.3.31"
reqwest = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4"] }
url = "2.5.0"
